[gd_scene load_steps=14 format=3 uid="uid://doplp01avuhqa"]

[ext_resource type="Script" path="res://scripts/system/game_start.gd" id="1_mx7pn"]
[ext_resource type="Texture2D" uid="uid://ciokqml7afcac" path="res://assets/Title.png" id="2_emxg2"]
[ext_resource type="Texture2D" uid="uid://c77ain2y40md5" path="res://assets/TinySword/UI/Banners/Banner_Horizontal.png" id="3_68ulv"]
[ext_resource type="Theme" uid="uid://bo2qtwpabvjqx" path="res://themes/blue_button_theme.tres" id="8_icjlk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_485s0"]
texture = ExtResource("2_emxg2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qaedy"]
texture = ExtResource("3_68ulv")
texture_margin_left = 32.0
texture_margin_top = 30.0
texture_margin_right = 32.0
texture_margin_bottom = 45.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(32, 45, 128, 135)

[sub_resource type="Animation" id="Animation_71f4o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(95, 366)]
}

[sub_resource type="Animation" id="Animation_xeyxp"]
resource_name = "menuAnimation"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonPanel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(95, 325), Vector2(95, 260), Vector2(95, 325)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0wlqb"]
_data = {
"RESET": SubResource("Animation_71f4o"),
"menuAnimation": SubResource("Animation_xeyxp")
}

[sub_resource type="Animation" id="Animation_turwr"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(3.605, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_urlks"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(1, 3.605),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_eym42"]
resource_name = "fade_out_to_ranking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.9),
"transitions": PackedFloat32Array(1, 3.605),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r1id2"]
_data = {
"fade_in": SubResource("Animation_turwr"),
"fade_out": SubResource("Animation_urlks"),
"fade_out_to_ranking": SubResource("Animation_eym42")
}

[node name="GameStart" type="CanvasLayer"]
script = ExtResource("1_mx7pn")

[node name="Background" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_485s0")

[node name="ButtonPanel" type="Panel" parent="."]
offset_left = 95.0
offset_top = 366.0
offset_right = 448.0
offset_bottom = 749.0
theme_override_styles/panel = SubResource("StyleBoxTexture_qaedy")

[node name="Control" type="Control" parent="ButtonPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme = ExtResource("8_icjlk")

[node name="StartButton" type="Button" parent="ButtonPanel/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.5
offset_top = 45.0
offset_right = 109.5
offset_bottom = 124.0
grow_horizontal = 2
focus_next = NodePath("../RankingButton")
focus_previous = NodePath("../CheckButton")
mouse_default_cursor_shape = 2
button_mask = 7
text = "Start"

[node name="RankingButton" type="Button" parent="ButtonPanel/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -45.5
offset_right = 111.0
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../CheckButton")
focus_previous = NodePath("../StartButton")
mouse_default_cursor_shape = 2
button_mask = 7
text = "Ranking"

[node name="CheckButton" type="CheckButton" parent="ButtonPanel/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = 58.5
offset_right = 132.0
offset_bottom = 112.5
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../RankingButton")
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
action_mode = 0
button_mask = 7
text = "Joypad UI
(Turn on for mobile devices)"
icon_alignment = 2
expand_icon = true

[node name="MenuAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0wlqb")
}
autoplay = "menuAnimation"

[node name="FadeAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r1id2")
}
autoplay = "fade_in"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="ButtonPanel/Control/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonPanel/Control/RankingButton" to="." method="_on_ranking_button_pressed"]
[connection signal="toggled" from="ButtonPanel/Control/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="animation_finished" from="FadeAnimation" to="." method="_on_fade_out_animation_finished"]
